[project]
name = "biobro"
version = "0.1.0"
description = "Bio AI teacher for children"
authors = [
    {name = "Jimmy Hong, Leo Kuo"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = "3.12.7"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)",
    "langchain (>=0.3.19,<0.4.0)",
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false